{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 18,
  "lineage": "fab2e488-5b8f-9168-0084-da5342b3a1da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf1bba1cb44eea15",
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:elastic-ip/eipalloc-0bf1bba1cb44eea15",
            "association_id": "eipassoc-0721371a72eae54e4",
            "domain": "vpc",
            "id": "eipalloc-0bf1bba1cb44eea15",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-031c2a9304264cc21",
            "private_dns": "ip-10-0-1-169.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-3-39-141-153.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.141.153",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-nat-eip"
            },
            "tags_all": {
              "Name": "practice-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:internet-gateway/igw-01888d3ad9448d79f",
            "id": "igw-01888d3ad9448d79f",
            "owner_id": "933505494646",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-igw"
            },
            "tags_all": {
              "Name": "practice-igw"
            },
            "vpc_id": "vpc-06999c1d948671868"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf1bba1cb44eea15",
            "association_id": "eipassoc-0721371a72eae54e4",
            "connectivity_type": "public",
            "id": "nat-0b13a2dfbe1d4c65c",
            "network_interface_id": "eni-031c2a9304264cc21",
            "private_ip": "10.0.1.169",
            "public_ip": "3.39.141.153",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04db5c0c2d41dd122",
            "tags": {
              "Name": "practice-nat-2a"
            },
            "tags_all": {
              "Name": "practice-nat-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:route-table/rtb-0a996543cd3732eab",
            "id": "rtb-0a996543cd3732eab",
            "owner_id": "933505494646",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b13a2dfbe1d4c65c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practice-sub-pri-rt"
            },
            "tags_all": {
              "Name": "practice-sub-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06999c1d948671868"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "rtb-0a996543cd3732eab",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:route-table/rtb-0a65aea4aa645fc1d",
            "id": "rtb-0a65aea4aa645fc1d",
            "owner_id": "933505494646",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01888d3ad9448d79f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practice-sub-pub-rt"
            },
            "tags_all": {
              "Name": "practice-sub-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06999c1d948671868"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "rtb-0a65aea4aa645fc1d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bf74cd682567a0d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a996543cd3732eab",
            "subnet_id": "subnet-07961322609716172"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_2a",
            "aws_subnet.public_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9fcb5307a21743",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a996543cd3732eab",
            "subnet_id": "subnet-004bfa49b0bc652f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_2c",
            "aws_subnet.public_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eca41ec107e4216",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a65aea4aa645fc1d",
            "subnet_id": "subnet-04db5c0c2d41dd122"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075719e38abba2b55",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a65aea4aa645fc1d",
            "subnet_id": "subnet-0ea55c90c9617ebc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:subnet/subnet-07961322609716172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07961322609716172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933505494646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pri-2a"
            },
            "tags_all": {
              "Name": "practice-sub-pri-2a"
            },
            "vpc_id": "vpc-06999c1d948671868"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "subnet-07961322609716172",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:subnet/subnet-004bfa49b0bc652f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004bfa49b0bc652f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933505494646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pri-2c"
            },
            "tags_all": {
              "Name": "practice-sub-pri-2c"
            },
            "vpc_id": "vpc-06999c1d948671868"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "subnet-004bfa49b0bc652f0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:subnet/subnet-04db5c0c2d41dd122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db5c0c2d41dd122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933505494646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pub-2a"
            },
            "tags_all": {
              "Name": "practice-sub-pub-2a"
            },
            "vpc_id": "vpc-06999c1d948671868"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "subnet-04db5c0c2d41dd122",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:subnet/subnet-0ea55c90c9617ebc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea55c90c9617ebc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933505494646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pub-2c"
            },
            "tags_all": {
              "Name": "practice-sub-pub-2c"
            },
            "vpc_id": "vpc-06999c1d948671868"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "subnet-0ea55c90c9617ebc0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933505494646:vpc/vpc-06999c1d948671868",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04cd6dbd0ebc6cf52",
            "default_route_table_id": "rtb-071d04043753498b9",
            "default_security_group_id": "sg-075cb1b824d9ed780",
            "dhcp_options_id": "dopt-08faec7c55eeb178b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06999c1d948671868",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071d04043753498b9",
            "owner_id": "933505494646",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice_vpc"
            },
            "tags_all": {
              "Name": "practice_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933505494646",
            "id": "vpc-06999c1d948671868",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}